@@ -4,6 +4,192 @@ package SPVM::CORE {
   use SPVM::List;
   use SPVM::Hash;
 
+  precompile sub sliceb : byte[] ($nums : byte[], $offset : int, $length : int) {
+    
+    if ($nums == undef) {
+      croak "Array must be defined";
+    }
+    
+    my $array_length = @$nums;
+    
+    if ($offset < 0 || $offset >= $length - 1) {
+      croak "Invalid offset";
+    }
+    
+    if ($length < 0) {
+      croak "Length must be non-zero value";
+    }
+    
+    if ($offset + $length > $array_length) {
+      croak "Offset + length must not be over array length";
+    }
+    
+    my $slice = new byte[$length];
+    
+    my $pos = 0;
+    for (my $i = $offset; $i < $offset + $length; $i++) {
+      $slice->[$pos] = $nums->[$i];
+      $pos++;
+    }
+    
+    return $slice;
+  }
+
+  precompile sub slices : short[] ($nums : short[], $offset : int, $length : int) {
+    
+    if ($nums == undef) {
+      croak "Array must be defined";
+    }
+    
+    my $array_length = @$nums;
+    
+    if ($offset < 0 || $offset >= $length - 1) {
+      croak "Invalid offset";
+    }
+    
+    if ($length < 0) {
+      croak "Length must be non-zero value";
+    }
+    
+    if ($offset + $length > $array_length) {
+      croak "Offset + length must not be over array length";
+    }
+    
+    my $slice = new short[$length];
+    
+    my $pos = 0;
+    for (my $i = $offset; $i < $offset + $length; $i++) {
+      $slice->[$pos] = $nums->[$i];
+      $pos++;
+    }
+    
+    return $slice;
+  }
+
+  precompile sub slicei : int[] ($nums : int[], $offset : int, $length : int) {
+    
+    if ($nums == undef) {
+      croak "Array must be defined";
+    }
+    
+    my $array_length = @$nums;
+    
+    if ($offset < 0 || $offset >= $length - 1) {
+      croak "Invalid offset";
+    }
+    
+    if ($length < 0) {
+      croak "Length must be non-zero value";
+    }
+    
+    if ($offset + $length > $array_length) {
+      croak "Offset + length must not be over array length";
+    }
+    
+    my $slice = new int[$length];
+    
+    my $pos = 0;
+    for (my $i = $offset; $i < $offset + $length; $i++) {
+      $slice->[$pos] = $nums->[$i];
+      $pos++;
+    }
+    
+    return $slice;
+  }
+
+  precompile sub slicel : long[] ($nums : long[], $offset : int, $length : int) {
+    
+    if ($nums == undef) {
+      croak "Array must be defined";
+    }
+    
+    my $array_length = @$nums;
+    
+    if ($offset < 0 || $offset >= $length - 1) {
+      croak "Invalid offset";
+    }
+    
+    if ($length < 0) {
+      croak "Length must be non-zero value";
+    }
+    
+    if ($offset + $length > $array_length) {
+      croak "Offset + length must not be over array length";
+    }
+    
+    my $slice = new long[$length];
+    
+    my $pos = 0;
+    for (my $i = $offset; $i < $offset + $length; $i++) {
+      $slice->[$pos] = $nums->[$i];
+      $pos++;
+    }
+    
+    return $slice;
+  }
+
+  precompile sub slicef : float[] ($nums : float[], $offset : int, $length : int) {
+    
+    if ($nums == undef) {
+      croak "Array must be defined";
+    }
+    
+    my $array_length = @$nums;
+    
+    if ($offset < 0 || $offset >= $length - 1) {
+      croak "Invalid offset";
+    }
+    
+    if ($length < 0) {
+      croak "Length must be non-zero value";
+    }
+    
+    if ($offset + $length > $array_length) {
+      croak "Offset + length must not be over array length";
+    }
+    
+    my $slice = new float[$length];
+    
+    my $pos = 0;
+    for (my $i = $offset; $i < $offset + $length; $i++) {
+      $slice->[$pos] = $nums->[$i];
+      $pos++;
+    }
+    
+    return $slice;
+  }
+
+  precompile sub sliced : double[] ($nums : double[], $offset : int, $length : int) {
+    
+    if ($nums == undef) {
+      croak "Array must be defined";
+    }
+    
+    my $array_length = @$nums;
+    
+    if ($offset < 0 || $offset >= $length - 1) {
+      croak "Invalid offset";
+    }
+    
+    if ($length < 0) {
+      croak "Length must be non-zero value";
+    }
+    
+    if ($offset + $length > $array_length) {
+      croak "Offset + length must not be over array length";
+    }
+    
+    my $slice = new double[$length];
+    
+    my $pos = 0;
+    for (my $i = $offset; $i < $offset + $length; $i++) {
+      $slice->[$pos] = $nums->[$i];
+      $pos++;
+    }
+    
+    return $slice;
+  }
+
   native sub reverseb : void ($nums : byte[]);
   native sub reverses : void ($nums : short[]);
   native sub reversei : void ($nums : int[]);
