@@ -1,6 +1,115 @@
 package TestCase::CoreFunc::Basic {
   use TestCase::Minimal;
 
+  sub test_sliceb : int () {
+    {
+      my $nums = [(byte)5, -7, 9, INT8_MIN(), 127, 15, 19];
+      my $slice = sliceb($nums, 0, 7);
+      unless (equals_barray($slice, [(byte)5, -7, 9, INT8_MIN(), 127, 15, 19])) {
+        return 0;
+      }
+    }
+    
+    {
+      my $nums = [(byte)5, -7, 9, INT8_MIN(), 127, 15, 19];
+      my $slice = sliceb($nums, 1, 3);
+      unless (equals_barray($slice, [(byte)-7, 9, INT8_MIN()])) {
+        return 0;
+      }
+    }
+
+    return 1;
+  }
+  sub test_slices : int () {
+    {
+      my $nums = [(short)5, -7, 9, INT16_MIN(), 127, 15, 19];
+      my $slice = slices($nums, 0, 7);
+      unless (equals_sarray($slice, [(short)5, -7, 9, INT16_MIN(), 127, 15, 19])) {
+        return 0;
+      }
+    }
+    {
+      my $nums = [(short)5, -7, 9, INT16_MIN(), 127, 15, 19];
+      my $slice = slices($nums, 1, 3);
+      unless (equals_sarray($slice, [(short)-7, 9, INT16_MIN()])) {
+        return 0;
+      }
+    }
+
+    return 1;
+  }
+  sub test_slicei : int () {
+    {
+      my $nums = [(int)5, -7, 9, INT32_MIN(), 127, 15, 19];
+      my $slice = slicei($nums, 0, 7);
+      unless (equals_iarray($slice, [(int)5, -7, 9, INT32_MIN(), 127, 15, 19])) {
+        return 0;
+      }
+    }
+    {
+      my $nums = [(int)5, -7, 9, INT32_MIN(), 127, 15, 19];
+      my $slice = slicei($nums, 1, 3);
+      unless (equals_iarray($slice, [(int)-7, 9, INT32_MIN()])) {
+        return 0;
+      }
+    }
+    return 1;
+  }
+  sub test_slicel : int () {
+    {
+      my $nums = [(long)5, -7, 9, INT64_MIN(), 127, 15, 19];
+      my $slice = slicel($nums, 0, 7);
+      unless (equals_larray($slice, [(long)5, -7, 9, INT64_MIN(), 127, 15, 19])) {
+        return 0;
+      }
+    }
+    {
+      my $nums = [(long)5, -7, 9, INT64_MIN(), 127, 15, 19];
+      my $slice = slicel($nums, 1, 3);
+      unless (equals_larray($slice, [(long)-7, 9, INT64_MIN()])) {
+        return 0;
+      }
+    }
+    
+    return 1;
+  }
+  sub test_slicef : int () {
+    {
+      my $nums = [(float)5, -7, 9, FLT_MIN(), 127, 15, 19];
+      my $slice = slicef($nums, 0, 7);
+      unless (equals_farray($slice, [(float)5, -7, 9, FLT_MIN(), 127, 15, 19])) {
+        return 0;
+      }
+    }
+    {
+      my $nums = [(float)5, -7, 9, FLT_MIN(), 127, 15, 19];
+      my $slice = slicef($nums, 1, 3);
+      unless (equals_farray($slice, [(float)-7, 9, FLT_MIN()])) {
+        return 0;
+      }
+    }
+    
+    
+    return 1;
+  }
+  sub test_sliced : int () {
+    {
+      my $nums = [(double)5, -7, 9, DBL_MIN(), 127, 15, 19];
+      my $slice = sliced($nums, 0, 7);
+      unless (equals_darray($slice, [(double)5, -7, 9, DBL_MIN(), 127, 15, 19])) {
+        return 0;
+      }
+    }
+    {
+      my $nums = [(double)5, -7, 9, DBL_MIN(), 127, 15, 19];
+      my $slice = sliced($nums, 1, 3);
+      unless (equals_darray($slice, [(double)-7, 9, DBL_MIN()])) {
+        return 0;
+      }
+    }
+    return 1;
+  }
+
   sub test_reverseb : int () {
     {
       my $nums = [(byte)1, 3, INT8_MAX()];
